# KRP

./: LICENSE  MANIFEST.in  README.md  debug_interpreter.py  debug_parse.py  debug_parse2.py  ide.py  install.bat  install_dependencies.bat  krp_pkg.py  main.py  pyproject.toml  requirements.txt  run_ide.bat  run_interpreter.py  setup.py  버전_1.0.1_업데이트_완료.md  시작하기.txt
compiler/: __init__.py  codegen.py  interpreter.py  lexer.py  parser.py
examples/: class_example.한글  conditional.한글  dict_example.한글  fibonacci.한글  hello.한글  list_example.한글  loop.한글  loop_test.한글  numeric_vars.한글  stdlib_example.한글
grammar/: Korean.g4
korean_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
krp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_lexer.py  test_parser.py
